--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,9 @@
-.App {
-  text-align: center;
+.document-main {
+    flex: 1 1 100%;
+    padding: 36px;
 }
 
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
+.document-main iframe {
+    transform: rotate(-5deg);
+    margin: 48px;
 }
