--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
+.main-content {
+    position: relative;
+    left: 20vw;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    width: 80vw;
+}
 .document-main {
     flex: 1 1 100%;
     padding: 36px;
-}
-
-.document-main iframe {
-    transform: rotate(-5deg);
-    margin: 48px;
 }
