--- a/src/components/layouts/Header/index.css
+++ b/src/components/layouts/Header/index.css
@@ -1,36 +1,3 @@
 .document-header {
-    padding: 36px;
-    border-bottom: 1px solid;
-    background: #dcc;
-}
-
-.document-header__nav {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-.nav {
-    list-style: none;
-    display: flex;
-    align-items: flex-start;
-    flex-wrap: wrap;
-}
-
-.nav__item {
-    margin: 0.2rem;
-    box-shadow: 1px 1px 1px 1px;
-}
-.nav__item:hover {
-    box-shadow: 1px 1px 1px;
-}
-
-.nav__item a {
-    text-decoration: none;
-    display: block;
-    padding: 0.8rem;
-}
-
-.document-header__page-title {
-    text-align: center;
+    background: #d6dde5;
 }
