--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Barlow+Condensed&display=swap');
-
+@import url('https://fonts.googleapis.com/css?family=Nunito&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -9,15 +9,15 @@
 html,
 body {
     height: 100%;
-    background: #ddd;
+    background: #eff3f6;
     font-family: 'Barlow Condensed', sans-serif;
 }
 
 #root {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
+    overflow: hidden;
 }
+
+h1, h2, h3, h4, h5, h6 { font-family: 'Nunito', sans-serif; }
 
 h1, h2 {
     text-align: center;
@@ -29,35 +29,21 @@ h1 {
     color: #555;
 }
 
-h2, h3, h4, h5, h6 {
-    color: #333;
-}
+h2, h3, h4, h5, h6 { color: #333; }
 
-h2 {
-    font-size: 2rem;
-}
+h2 { font-size: 2rem; }
 
-h3 {
-    font-size: 1.6rem;
-}
+h3 { font-size: 1.6rem; }
 
-h4 {
-    font-size: 1.4rem;
-}
+h4 { font-size: 1.4rem; }
 
-h5 {
-    font-size: 1.2rem;
-}
+h5 { font-size: 1.2rem; }
 
-h6 {
-    font-size: 1rem;
-}
+h6 { font-size: 1rem; }
 
 a {
     color: red;
     font-size: 1.1rem;
 }
 
-p {
-    margin: 18px 0;
-}
+p { margin: 18px 0; }
